2012-08-09  Sergio Martin <sergio.martin@artica.es>

	* include/functions_modules.php
	include/functions_groups.php
	include/javascript/pandora.js: Fix minor issues
	in the select for time advanced control. Improve some
	functions to use from metaconsole

2012-08-09  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/reporting/reporting_builer.list_items.php
	  godmode/reporting/reporting_builer.php: Added button to masively 
	delete all the selected report items and massively delete these 
	items from position X and above/below.

2012-08-06  Sergio Martin <sergio.martin@artica.es>

	* godmode/modules/manage_network_components_form_plugin.php: 
	Fixed a bug where print the add/delete macro

2012-08-06  Sergio Martin <sergio.martin@artica.es>

	* include/functions_users.php
	include/functions_html.php
	include/constants.php
	godmode/modules/manage_network_components_form_plugin.php: order 
	functions to use from enterprise side, fix little interface bug in
	components form

2012-08-02 Miguel de Dios <miguel.dedios@artica.es>
	
	* pandoradb_data.sql, pandoradb.data.postgreSQL.sql,
	pandoradb.data.oracle.sql, include/functions_config.php: fixed the
	"list_ACL_IPs_for_API" update.
	
	* operation/events/events_marquee.php, godmode/setup/setup.php,
	godmode/reporting/graph_builder.php,
	godmode/reporting/map_builder.php, godmode/reporting/graphs.php,
	godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/visual_console_builder.php,
	godmode/alerts/configure_alert_compound.php,
	godmode/alerts/alert_list.php,
	godmode/alerts/configure_alert_template.php,
	godmode/alerts/alert_templates.php,
	godmode/alerts/configure_alert_action.php,
	godmode/alerts/configure_alert_command.php,
	godmode/alerts/alert_actions.php,
	godmode/alerts/alert_list.builder.php,
	godmode/alerts/configure_alert_special_days.php,
	include/functions_api.php, include/functions_ui.php,
	include/functions_netflow.php, include/functions_alerts.php,