@@ -1,3 +1,8 @@
+2012-08-10  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_api.php: Add the missed function api_get_graph_module_data
+	and update it to work with last graph system
+
 2012-08-09  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_modules.php
